# AI-T-O-VIDEO

./: .credentials_store.json  .replit  pyproject.toml  replit.nix
artifacts/api-server/src/routes/: auth.ts
attached_assets/: Pasted--L-i-trong-qu-tr-nh-t-o-video-BrowserType-launch-Target_1784377859472.txt  Pasted--L-i-trong-qu-tr-nh-t-o-video-BrowserType-launch-Target_1784378521234.txt  Pasted--L-i-trong-qu-tr-nh-t-o-video-BrowserType-launch-Target_1784378653883.txt  Pasted--launching-home-runner-workspace-cache-ms-playwright-ch_1784394035696.txt  Pasted-Y-u-c-u-URL-https-contribution-usercontent-google-com-d_1784397558124.txt
bot/: __init__.py  auto_video.py  config.py  gemini.py  gemini_playwright.py  handlers.py  main.py  oauth.py  store.py  web.py  youtube_upload.py
